--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "firebase": "^9.21.0",
+    "firebase-admin": "^11.7.0",
+    "firebase-functions": "^4.3.1",
     "request": "^2.88.2"
   }
 }
