--- a/firebase.json
+++ b/firebase.json
@@ -53,7 +53,8 @@
         "firebase-debug.*.log"
       ],
       "predeploy": [
-        "npm --prefix \"$RESOURCE_DIR\" run lint"
+        "npm --prefix \"$RESOURCE_DIR\" run lint",
+        "node app.js"
       ]
     }
   ]
