--- a/firebase.json
+++ b/firebase.json
@@ -4,7 +4,7 @@
     "indexes": "firestore.indexes.json"
   },
   "hosting": {
-    "public": "/",
+    "public": ".",
     "ignore": [
       "firebase.json",
       "**/.*",
@@ -13,7 +13,7 @@
     "rewrites": [
       {
         "source": "**",
-        "destination": "/signup.html"
+        "function": "app"
       }
     ]
   },
@@ -45,7 +45,7 @@
   "functions": [
     {
       "source": "functions",
-      "codebase": "default",
+      "codebase": "functions",
       "ignore": [
         "node_modules",
         ".git",
@@ -53,8 +53,7 @@
         "firebase-debug.*.log"
       ],
       "predeploy": [
-        "npm --prefix \"$RESOURCE_DIR\" run lint",
-        "node app.js"
+        "npm --prefix \"$RESOURCE_DIR\" run lint"
       ]
     }
   ]
